[gd_scene load_steps=5 format=3 uid="uid://ciegbyfrx5lf3"]

[ext_resource type="Theme" uid="uid://cex15tcav7we4" path="res://assets/pause_screen_theme.tres" id="1_cytcy"]
[ext_resource type="Shader" path="res://assets/blur.gdshader" id="2_82f56"]
[ext_resource type="Script" path="res://lessons_reference/10_pause_screen/pause_screen.gd" id="2_r7c7l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v6h3r"]
shader = ExtResource("2_82f56")
shader_parameter/blur_amount = 2.897
shader_parameter/tint = null
shader_parameter/tint_strength = null
shader_parameter/saturation = 1.0

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cytcy")
script = ExtResource("2_r7c7l")

[node name="BlurColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_v6h3r")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UIPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -217.0
offset_right = 260.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 128)
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="UIPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
